assets/css/styles.css
:root {
    --code-color: #12E1B9;
    --glitch-pink: #ff3fab;
    --glitch-lavender: #f6c6ff;
    --glitch-blue: #c0e4ff;
}

body {
    padding: 3em;
    /* background-image: '../assets/images/space-wallpaper-4.jpeg'; */
    background-color: black;
    color: var(--code-color);
    font-family: "IBM Plex Mono", monospace;
    font-size: 1em;
    text-transform: uppercase;
}

/* Could also style the sections like this if the content supports it anyway */
nav {
    height: 100vh;
}

section {
    margin: 4em 0;
}  

h1 {
    color: var(--code-color);
}

h2 {
    small {
      display: block;
      font-size: medium;
      text-transform: lowercase;
    }
}

ul {
    list-style: none;
    display: flex;
    flex-wrap: wrap;
    gap: 1em 4em;
    /* `ul` has a value of 40px unless set otherwise. This brings up questions of the wrapping and what I think looks best visually in responsive behavior. */
    padding-inline-start: 30px;
}

li {
    border: 1px orange solid;
    height: 3em;
    width: 12em;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

li div {
    border: 2px var(--code-color) solid;
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: space-around;
    align-items: center; 
}

li a {
    text-decoration: none;
    color: var(--code-color);
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: space-around;
    align-items: center; 
    flex-wrap: wrap;
}

button {
    font-family: "IBM Plex Mono";
    font-size: 1em;
    text-transform: uppercase;
}

.fun-token {
    height: 2em;
    transform: rotate(135deg);
    padding: 0.5em;
}

.ui-icon {
    height: 25px;
}

.arrow {
    width: 5em;
    height: 5em;
}

/* About */
#about {
    color: var(--glitch-lavender);
}
/* end of About */


/*----------*/


/* Skills */
#skills {
    color: var(--glitch-pink);
}

.skills-list {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}
/* end of Skills */


/*----------*/


/* Projects */
#projects {    
    ul {
        display: flex;
        justify-content: space-evenly;
        align-items: center;
    }

    li {
        border: 2px var(--glitch-lavender) solid;
        padding: 15px;
        height: 550px;
        overflow-y: scroll;
        width: 45%;
        display: flex;
        flex-direction: column;
        align-items: flex-start;

        div {
            border: 0;
        }

        > * {
            margin: 0;
            padding:  0.5em 0;
        }
    }

    p {
        text-transform: none;
    }
    
    a {
        color: var(--glitch-lavender);
        display: revert;
        height: auto;
        text-decoration: revert;
        text-transform: lowercase;
    }
    
    .tech-icon-list, .samples {
        display: flex;
        flex-wrap: wrap;
        justify-content: space-evenly;
    }
    
    .samples {
        max-height: 250px;
        overflow-y: scroll;

        > img {
            width: 45%;
            max-width: 270px;
        }
    }

    .tech-icon-list {
        max-height: 50px;

        > img {
            max-width: 20%;
            height: inherit;
        }
    }

    /* .carousel-arrow {
    } */

    #carousel-right {
        transform: rotate(90deg);
    }
    
    #carousel-left {
        transform: rotate(-90deg);
    }
}
/* End of Projects */


/*----------*/


/* Reviews */
#reviews {
    color: var(--glitch-blue);
    
    li {
        display: initial;
        height: initial;
        width: 500px;
        
        p {
            text-transform: none;
        }
    }
    
    p {
        text-decoration: initial;
        text-transform: lowercase;
        margin: 0.25em 0;
    }
    
    figure {
        margin: 0;
        display: flex;
        justify-content: space-between;
        flex-direction: column;
        height: 100%;
    }
    
    .sources {
        display: flex;
        flex-direction: column;
        align-items: flex-end;
        padding: 1em;
        margin: 0 4em;
    
        a {
            color: #ffc6c6;
            text-decoration: underline;
        }
    
        .relation {
            font-size: small;
            color: #eac5da;
        }
    }
}
/* end of Reviews */
  
  
/*----------*/
  
  
/* -----Contact----- */
.opportunities {
    list-style: armenian;
}

/* end of Contact */


/*----------*/


/* Credit */

/* end of Credit */


/*----------*/


/* Social buttons */
.social-media {
    display: flex;
    flex-direction: column;
    position: fixed;
    right: 1%;
    bottom: 50%;
}

.ascii {
    text-decoration: none;
    color: var(--code-color);
    white-space: pre;
    text-transform: initial;
    font-size: 18px;
    line-height: 0.9;
    
    /* this is currently the body font, but I'd like to reduce unanticipated consequences of changing fonts given the exact spacing of ascii art. */
    font: "IBM Flex Mono", monospace;
}

.social-media-icon {
    width: 2em;
    height: 2em;
}
/* Social button ends */


/*----------*/


/* Scroll to top button */
.scroll-up {
    position: fixed;
    right: 0.5%;
    bottom: 3%;
    cursor: pointer;
}
/* Scroll to top button ends */

/* scrollbar styling */
*::-webkit-scrollbar {
    width: 12px; /*8px*/
}

*::-webkit-scrollbar-track {
    background: black;
}

*::-webkit-scrollbar-thumb {
    background-color: var(--code-color);
    border-radius: 8px;
    border: 3px solid black;
}

@media screen and (max-width: 576px) {
    body {
        padding: 1em;
    }
    
    blockquote {
        margin: 1em;
    }
    
    #reviews {
        ul {
            padding-inline-start: 0;
        }
        
        .sources {
            margin: 0;
        }
    }
}

